--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "vue": "^2.5.2",
+    "vue-pdf": "^4.0.8",
     "vue-print-nb": "^1.4.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
